--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,11 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Domain\\": "app/Domain/",
+            "Application\\": "app/Application/",
             "Database\\Factories\\": "database/factories/",
+            "Infrastructure\\": "app/Infrastructure/",
+            "UI\\": "app/UI/",
             "Database\\Seeders\\": "database/seeders/"
         }
     },
