--- a/docker_local/docker-compose.yml
+++ b/docker_local/docker-compose.yml
@@ -26,7 +26,7 @@ services:
 
   db:
     image: postgres:13.3
-    container_name: auth-postgres
+    container_name: teletype-postgres
     restart: unless-stopped
     environment:
         POSTGRES_DB: teletype-db
