--- a/docker_local/nginx/nginx.conf
+++ b/docker_local/nginx/nginx.conf
@@ -1,39 +1,72 @@
-
-user  nginx;
-worker_processes  auto;
-
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
-
-events {
-    worker_connections  1024;
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
 }
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+server {
+    listen 80;
+    listen [::]:80;
+    server_name localhost; # Замените на ваш домен, если нужно
+    server_tokens off;
+    root /var/www/app/public; # Путь к публичной папке Laravel
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    index index.php;
 
-    access_log  /var/log/nginx/access.log  main;
+    charset utf-8;
 
-    sendfile        on;
-    keepalive_timeout  65;
+    # Логирование
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log error;
 
-    server {
-        listen       80;
-        server_name  localhost;
+    # DNS-резолвер для Docker
+    resolver 127.0.0.11 valid=10s; # Добавляем Docker DNS
 
-        location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
+    # Обработка запросов к index.php
+    location /index.php {
+        try_files /not_exists @octane;
+    }
+
+    # Обработка всех остальных запросов
+    location / {
+        try_files $uri $uri/ @octane;
+    }
+
+    # Отключение логирования для favicon и robots
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
+
+    # Перенаправление 404 на index.php
+    error_page 404 /index.php;
+
+    # Проксирование к Laravel Octane (Swoole)
+    location @octane {
+        set $suffix "";
+
+        if ($uri = /index.php) {
+            set $suffix ?$query_string;
         }
 
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
+        proxy_http_version 1.1;
+        proxy_set_header Host $http_host;
+        proxy_set_header Scheme $scheme;
+        proxy_set_header SERVER_PORT $server_port;
+        proxy_set_header REMOTE_ADDR $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+
+        proxy_pass http://app:8000$suffix; # Проксируем к сервису app в Docker
+    }
+
+    # Запрет доступа к скрытым файлам
+    location ~ /\. {
+        deny all;
+    }
+
+    # Кэширование статических файлов
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|woff|woff2|ttf|svg|eot|pdf|map)$ {
+        expires max;
+        log_not_found off;
+        access_log off;
     }
 }
