--- a/docker_local/docker-compose.yml
+++ b/docker_local/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.9'
 name: teletype_test_task
 networks:
   teletype-service:
@@ -45,6 +44,10 @@ services:
     container_name: teletype-nginx
     networks:
       - teletype-service
+    volumes:
+        - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+        - ../:/var/www/app
+        - ./nginx/logs:/var/log/nginx
     ports:
       - "11180:80"
       - "11443:443"
